--- a/suge.css
+++ b/suge.css
@@ -26,7 +26,7 @@ h1 {
   border-radius: 10px;
   box-shadow: 3px #f0edee43;
   padding: 30px;
-  margin: 15px 400px;
+  margin: 15px 150px;
 }
 
 @media (max-width: 960px) {
